// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTrades REST bitfinex - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades REST gdax - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades REST gemini - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades REST kraken - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades WS bitfinex  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    false,
  ],
]
`;

exports[`addTrades WS gemini  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    false,
  ],
]
`;

exports[`getSourcePairs bitfinex  1`] = `
Array [
  "QUOTETICKERBASETICKER",
]
`;

exports[`getSourcePairs gdax  1`] = `
Array [
  "quoteticker-baseticker",
]
`;

exports[`getSourcePairs gemini  1`] = `
Array [
  "quotetickerbaseticker",
]
`;

exports[`getSourcePairs kraken  1`] = `
Array [
  "QUOTETICKERBASETICKER",
]
`;
